# variety

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  variety.cabal
src/Codec/: Elias.hs
src/Codec/Arithmetic/: Combinatorics.hs  Variety.hs
src/Codec/Arithmetic/Variety/: BitVec.hs  Bits.hs  Bounded.hs
src/Codec/Elias/: Natural.hs
test/: Main.hs
